[package]
name = "server-rs"
version = "0.1.0"
authors = ["heydabop <heydabop@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_contrib = { version = "0.4.5", default-features = false, features = ["json", "sqlite_pool"] }
serde = { version = "1.0", features = ["derive"] }
