[package]
name = "server-rs"
version = "0.1.0"
authors = ["heydabop <heydabop@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master", default-features = false }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", branch = "master", default-features = false, features = ["compression", "json", "sqlite_pool"] }
serde = { version = "1.0", features = ["derive"] }
